--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.0.2"
+    "ical-generator": "^0.2.8",
+    "mocha": "^3.0.2",
+    "request": "^2.75.0",
+    "request-promise": "^4.1.1"
   },
   "scripts": {
     "test": "mocha"
