Adding API Keys for the API Gateway

--- a/serverless.yml
+++ b/serverless.yml
@@ -16,7 +16,8 @@ service: meetup-event-collector # NOTE: update this with your service name
 provider:
   name: aws
   runtime: nodejs4.3
-
+  apiKeys:
+    - test-api-key
 # you can overwrite defaults here
 #defaults:
 #  stage: dev
@@ -39,6 +40,7 @@ functions:
       - http:
           path: meetupevents/calendar
           method: get
+          private: true
 #     - s3: ${bucket}
 #     - schedule: rate(10 minutes)
 #     - sns: greeter-topic
