Save iCal to S3

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "aws-sdk": "^2.6.12",
     "chai": "^3.5.0",
     "ical-generator": "^0.2.8",
     "mocha": "^3.0.2",
