--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: meetup-event-collector-22 # NOTE: update this with your service name
+service: meetup-event-collector # NOTE: update this with your service name
 
 provider:
   name: aws
